fix(display): set max width on chips to avoid overlapping content
resovles: KBDEV-882

--- a/src/components/DetailChip/index.scss
+++ b/src/components/DetailChip/index.scss
@@ -1,6 +1,7 @@
 @import '../../globals';
 
 .detail-chip {
+  max-width: 100%;
   .detail-chip {
     &__root {
       >div {
